# fiber-paid-http

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.fiber.config.ts  vitest.integration.config.ts  vitest.unit.config.ts
.github/workflows/: ci.yml
apps/demo-api/: package.json
apps/demo-api/src/: index.ts
apps/demo-web/: index.html  package.json  server.mjs
apps/demo-web/scripts/: check-static.mjs  sync-icons.tsx
apps/evidence-api/: package.json
apps/evidence-api/src/: battlecode.ts  index.ts
apps/evidence-web/: index.html  package.json  server.d.ts  server.mjs  tsconfig.json  vite.config.ts
apps/evidence-web/scripts/: check-action-coverage.mjs  check-browser-smoke.mjs  check-cli-start.mjs  check-layout.mjs  check-server.mjs  check-static.mjs  sync-icons.tsx
apps/evidence-web/src/: App.tsx  constants.ts  main.tsx  types.ts
crates/fiber-mpp-cli/: Cargo.toml
crates/fiber-mpp-cli/src/: main.rs
crates/fiber-mpp-core/: Cargo.toml
crates/fiber-mpp-core/src/: lib.rs
crates/fiber-mpp-f402/: Cargo.toml
crates/fiber-mpp-f402/src/: lib.rs
crates/fiber-mpp-fiber/: Cargo.toml
crates/fiber-mpp-fiber/src/: lib.rs
crates/fiber-mpp-fl402/: Cargo.toml
crates/fiber-mpp-fl402/src/: lib.rs
crates/fiber-mpp-server/: Cargo.toml
crates/fiber-mpp-server/src/: lib.rs
crates/fiber-mpp-storage/: Cargo.toml
crates/fiber-mpp-storage/src/: lib.rs
crates/fiber-paid-http-cli/: Cargo.toml
crates/fiber-paid-http-cli/src/: main.rs
crates/fiber-paid-http-core/: Cargo.toml
crates/fiber-paid-http-core/src/: lib.rs  mpp.rs
crates/fiber-paid-http-core/tests/: mpp_sdk_interop.rs
crates/fiber-paid-http-f402/: Cargo.toml
crates/fiber-paid-http-fiber/: Cargo.toml
crates/fiber-paid-http-fl402/: Cargo.toml
crates/fiber-paid-http-fl402/src/: lib.rs
crates/fiber-paid-http-server/: Cargo.toml
crates/fiber-paid-http-server/src/: lib.rs
crates/fiber-paid-http-storage/: Cargo.toml
crates/fiber-paid-http-x402/: Cargo.toml
deploy/fiber-demo/: README.md  fiber-demo.env.example  fiber-external-binaries.patch  netns.sh  nginx-http.conf
deploy/prometheus/: fiber-mpp-alerts.yml  fiber-paid-http-alerts.yml
docs/: README.md  architecture.md  battlecode-fmpp-tournament.md  battlecode-paid-http-tournament.md  bootstrap.md  canonical-core.md  conformance-vectors.md  demo-script.md  evidence-console-frontend-plan.md  evidence-console-redesign-plan.md  f402-compatibility.md  fiber-client-wallet-integration-plan.md  fiber-local-e2e.md  fiber-local-network.md  fiber-method.md  fiber-rpc.md  fiber-testnet-e2e.md  hackathon-submission.md  positioning.md  production-operations.md  production-readiness.md  protocol.md  rust-architecture.md  rust-conformance.md  rust-fiber-rpc.md  rust-migration-plan.md  security-matrix.md  security.md  service-metering.md  x402-compatibility.md
docs/refs/: README.md  fiber.md  infern.md  l402.md  missing-references.md  mpp.md  security.md
examples/battlecode/: README.md
examples/paid-api/: README.md
examples/paid-mcp-tool/: README.md
reports/: battlecode-fmpp-tournament.json  battlecode-paid-http-tournament.json  bootstrap-audit.md  canonical-core-parity.json  console-performance-audit.md  console-theatre-audit.md  evidence-console-action-coverage.json  evidence-console-browser-smoke.json  evidence-console-cli-start.json  evidence-live-demo-flow.json  fiber-e2e-result.json  fiber-local-e2e-evidence.json  fiber-local-e2e-success.json  fiber-mpp-gate.default.json  fiber-mpp-gate.json  fiber-mpp-gate.local.json  fiber-mpp-rust-gate.json  fiber-mpp-ts-gate.json  fiber-paid-http-gate.default.json  fiber-paid-http-gate.json  fiber-paid-http-gate.local.json  fiber-paid-http-rust-gate.json  fiber-paid-http-ts-gate.json  fiber-testnet-e2e-evidence.json  fiber-testnet-e2e-success.json  offline-payment-surface-audit.md  production-bootstrap-e2e.json  production-operations-matrix.json  rust-conformance.json  security-matrix.json  ts-conformance.json
reports/fiber-testnet-e2e/: canonical-core-parity.testnet.json  doctor-payee.json  doctor-payer.json  fiber-mpp-gate.testnet.json  fiber-paid-http-gate.testnet.json  preflight.json  testnet-e2e-report.json
scripts/: battlecode_demo.sh  battlecode_engine_smoke.ts  battlecode_fmpp_tournament.mjs  battlecode_paid_http_tournament.mjs  battlecode_setup.sh  evidence_live_demo.sh  evidence_live_flow.mjs  fiber_local_network.sh  fiber_mpp_canonical_gate.sh  fiber_mpp_gate.sh  fiber_mpp_ops_gate.sh  fiber_mpp_rust_gate.sh  fiber_paid_http_canonical_gate.sh  fiber_paid_http_gate.sh  fiber_paid_http_ops_gate.sh  fiber_paid_http_rust_gate.sh  fiber_production_bootstrap_e2e.mjs  fiber_testnet_e2e.sh
scripts/lib/: production-bootstrap-readiness.cjs  testnet-fiber-evidence-readiness.cjs
test-vectors/: attack.expired-challenge.json  attack.fl402-tampered-capability.json  attack.fl402-tampered-macaroon.json  attack.fl402-wrong-preimage.json  attack.receipt-on-error.json  attack.replay.json  attack.tampered-receipt.json  attack.wrong-amount.json  attack.wrong-method.json  attack.wrong-resource.json  attack.x402-tampered-requirement.json  challenge.valid.json  credential.valid.json  f402.challenge.valid.json  f402.credential.valid.json  fiber.local-e2e.receipt.json  fiber.local-e2e.report.json  fl402.challenge.valid.json  fl402.credential.valid.json  receipt.valid.json  resource.hash.valid.json  x402.payload.valid.json  x402.required.valid.json  x402.settlement.valid.json
tests/helpers/: fiber-fixture.ts
tests/integration/: fiber-e2e-env.ts  fiber-live.e2e.test.ts  fiber-preflight.test.ts  full-flow.test.ts
tests/unit/: battlecode-tournament.test.ts  bootstrap.test.ts  core.test.ts  f402.test.ts  fiber-method.test.ts  fl402.test.ts  middleware.test.ts  mpp-sdk-interop.test.ts  no-offline-payment-surface.test.ts  ops.test.ts  production-bootstrap-readiness.test.ts  production-evidence.test.ts  production-gate-scripts.test.ts  storage.test.ts  testnet-fiber-evidence-readiness.test.ts  x402.test.ts
(+29 files in other folders)
