[workspace]
members = [
  "crates/fiber-mpp-core",
  "crates/fiber-mpp-storage",
  "crates/fiber-mpp-fiber",
  "crates/fiber-mpp-f402",
  "crates/fiber-mpp-server",
  "crates/fiber-mpp-cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://example.invalid/fiber-mpp"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
hmac = "0.12"
rusqlite = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
