[workspace]
members = [
  "crates/fiber-paid-http-core",
  "crates/fiber-paid-http-storage",
  "crates/fiber-paid-http-fiber",
  "crates/fiber-paid-http-f402",
  "crates/fiber-paid-http-x402",
  "crates/fiber-paid-http-fl402",
  "crates/fiber-paid-http-server",
  "crates/fiber-paid-http-cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/a19q3/fiber-paid-http"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.7"
base64 = "0.22"
blake2b_simd = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
hmac = "0.12"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.2.0"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
