[package]
name = "fiber-mpp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fiber-mpp-rs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
fiber-mpp-core = { path = "../fiber-mpp-core" }
fiber-mpp-fiber = { path = "../fiber-mpp-fiber" }
fiber-mpp-server = { path = "../fiber-mpp-server" }
serde_json.workspace = true

