[package]
name = "fiber-mpp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
chrono.workspace = true
fiber-mpp-core = { path = "../fiber-mpp-core" }
fiber-mpp-fiber = { path = "../fiber-mpp-fiber" }
fiber-mpp-fl402 = { path = "../fiber-mpp-fl402" }
fiber-mpp-storage = { path = "../fiber-mpp-storage" }
hex.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
