[package]
name = "fiber-paid-http-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
default-run = "fiber-paid-http-rs"

[[bin]]
name = "fiber-paid-http-rs"
path = "src/main.rs"

[[bin]]
name = "fiber-mpp-rs"
path = "src/bin/fiber-mpp-rs.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
fiber-paid-http-core = { path = "../fiber-paid-http-core" }
fiber-paid-http-fiber = { path = "../fiber-paid-http-fiber" }
fiber-paid-http-server = { path = "../fiber-paid-http-server" }
serde_json.workspace = true
tokio.workspace = true
