[package]
name = "fiber-paid-http-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
blake2b_simd.workspace = true
chrono.workspace = true
hex.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_jcs.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
mpp = { version = "=0.10.4", default-features = false }
tempfile.workspace = true
