[package]
name = "fiber-paid-http-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
chrono.workspace = true
fiber-paid-http-core = { path = "../fiber-paid-http-core" }
fiber-paid-http-fiber = { path = "../fiber-paid-http-fiber" }
fiber-paid-http-fl402 = { path = "../fiber-paid-http-fl402" }
fiber-paid-http-storage = { path = "../fiber-paid-http-storage" }
hex.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
